# graca

./: .gitignore  Cargo.toml  README.md
data/: TestStudents.csv
src/: action.rs  app.rs  cli.rs  command.rs  config.rs  export.rs  fields.rs  grade.rs  grade_table.rs  helpers.rs  logging.rs  main.rs  table.rs  theme.rs  tui.rs  ui.rs
src/model/: grade.rs  mod.rs  scale.rs  students.rs
src/ui/: exam_result_table.rs  exam_stats_chart.rs  grading_scale_table.rs  mod.rs  report_tab.rs  scale_tab.rs  students_tab.rs  theme.rs
