[package]
name = "graca"
version = "0.2.0"
edition = "2021"
authors = ["Jonas Malassa"]

[dependencies]
clap = { version = "4.5.29", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.28.1"
csv = "1.3.1"
directories = "6.0.0"
ratatui = "0.29.0"
rust_xlsxwriter = "0.84.0"
toml = "0.8.20"
tracing-error = "0.2.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
lazy_static = "1.5.0"
tui-input = "0.11.1"
strum = "0.27.1"
strum_macros = "0.27.1"
